# IR-Optimization

./: CMakeLists.txt  README.md  main.cpp  main.h
analysePass/: CMakeLists.txt  Hello.cpp
testPass/: CMakeLists.txt  testPass.cpp
